--- a/Draw/Controller/FriendManage/FriendCell.xib
+++ b/Draw/Controller/FriendManage/FriendCell.xib
@@ -47,6 +47,7 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{0, 2}, {58, 60}}</string>
 								<reference key="NSSuperview" ref="1043728466"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="150275894"/>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -60,6 +61,7 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{2, 4}, {54, 54}}</string>
 								<reference key="NSSuperview" ref="1043728466"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="566096567"/>
 								<object class="NSColor" key="IBUIBackgroundColor">
 									<int key="NSColorSpace">3</int>
@@ -73,9 +75,10 @@
 							<object class="IBUILabel" id="566096567">
 								<reference key="NSNextResponder" ref="1043728466"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{61, 2}, {160, 26}}</string>
+								<string key="NSFrame">{{61, 2}, {134, 26}}</string>
 								<reference key="NSSuperview" ref="1043728466"/>
-								<reference key="NSNextKeyView" ref="952206121"/>
+								<reference key="NSWindow"/>
+								<reference key="NSNextKeyView" ref="1008497734"/>
 								<object class="NSColor" key="IBUIBackgroundColor" id="290682339">
 									<int key="NSColorSpace">3</int>
 									<bytes key="NSWhite">MCAwAA</bytes>
@@ -85,7 +88,7 @@
 								<int key="IBUIContentMode">7</int>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-								<string key="IBUIText"/>
+								<string key="IBUIText">烫烫烫烫烫烫烫烫烫烫烫烫烫</string>
 								<object class="NSColor" key="IBUITextColor">
 									<int key="NSColorSpace">1</int>
 									<bytes key="NSRGB">MC40MTE3NjQ3MDU5IDAuMTk2MDc4NDMxNCAwLjA0NzA1ODgyMzUzAA</bytes>
@@ -112,6 +115,7 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{61, 35}, {55, 20}}</string>
 								<reference key="NSSuperview" ref="1043728466"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="227378708"/>
 								<reference key="IBUIBackgroundColor" ref="290682339"/>
 								<bool key="IBUIOpaque">NO</bool>
@@ -142,6 +146,7 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{119, 35}, {63, 20}}</string>
 								<reference key="NSSuperview" ref="1043728466"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="424371828"/>
 								<reference key="IBUIBackgroundColor" ref="290682339"/>
 								<bool key="IBUIOpaque">NO</bool>
@@ -160,8 +165,9 @@
 							<object class="IBUIImageView" id="424371828">
 								<reference key="NSNextResponder" ref="1043728466"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{186, 35}, {20, 20}}</string>
+								<string key="NSFrame">{{195, 35}, {20, 20}}</string>
 								<reference key="NSSuperview" ref="1043728466"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="853163999"/>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -169,8 +175,9 @@
 							<object class="IBUIButton" id="853163999">
 								<reference key="NSNextResponder" ref="1043728466"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{222, 18}, {66, 26}}</string>
+								<string key="NSFrame">{{238, 18}, {50, 26}}</string>
 								<reference key="NSSuperview" ref="1043728466"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="768365372"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -198,8 +205,9 @@
 							<object class="IBUILabel" id="768365372">
 								<reference key="NSNextResponder" ref="1043728466"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{222, 18}, {66, 26}}</string>
+								<string key="NSFrame">{{238, 18}, {50, 26}}</string>
 								<reference key="NSSuperview" ref="1043728466"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="377664735"/>
 								<reference key="IBUIBackgroundColor" ref="290682339"/>
 								<bool key="IBUIOpaque">NO</bool>
@@ -223,36 +231,25 @@
 									<int key="NSfFlags">16</int>
 								</object>
 							</object>
-							<object class="IBUIImageView" id="952206121">
-								<reference key="NSNextResponder" ref="1043728466"/>
-								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{42, 45}, {16, 16}}</string>
-								<reference key="NSSuperview" ref="1043728466"/>
-								<reference key="NSNextKeyView" ref="614205915"/>
-								<string key="NSReuseIdentifierKey">_NS:9</string>
-								<bool key="IBUIUserInteractionEnabled">NO</bool>
-								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-								<object class="NSCustomResource" key="IBUIImage">
-									<string key="NSClassName">NSImage</string>
-									<string key="NSResourceName">mumber@2x.png</string>
-								</object>
-							</object>
 							<object class="IBUIView" id="377664735">
 								<reference key="NSNextResponder" ref="1043728466"/>
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{0, 65}, {300, 1}}</string>
 								<reference key="NSSuperview" ref="1043728466"/>
+								<reference key="NSWindow"/>
+								<reference key="NSNextKeyView"/>
 								<object class="NSColor" key="IBUIBackgroundColor">
 									<int key="NSColorSpace">1</int>
 									<bytes key="NSRGB">MC42ODYyNzQ1MDk4IDAuNDg2Mjc0NTA5OCAwLjI2NjY2NjY2NjcAA</bytes>
 								</object>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 							</object>
-							<object class="IBUILabel" id="614205915">
+							<object class="IBUILabel" id="1008497734">
 								<reference key="NSNextResponder" ref="1043728466"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{42, 45}, {16, 16}}</string>
+								<string key="NSFrame">{{195, 8}, {27, 16}}</string>
 								<reference key="NSSuperview" ref="1043728466"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="1002571854"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -260,9 +257,11 @@
 								<int key="IBUIContentMode">7</int>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-								<string key="IBUIText">50</string>
-								<reference key="IBUITextColor" ref="373356622"/>
+								<string key="IBUIText">LV:50</string>
+								<reference key="IBUITextColor" ref="47339557"/>
 								<reference key="IBUIHighlightedColor" ref="373356622"/>
+								<reference key="IBUIShadowColor" ref="373356622"/>
+								<string key="IBUIShadowOffset">{0, 1}</string>
 								<int key="IBUIBaselineAdjustment">0</int>
 								<float key="IBUIMinimumFontSize">10</float>
 								<int key="IBUITextAlignment">1</int>
@@ -279,6 +278,7 @@
 						</array>
 						<string key="NSFrameSize">{300, 65}</string>
 						<reference key="NSSuperview" ref="923471272"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="630427240"/>
 						<reference key="IBUIBackgroundColor" ref="290682339"/>
 						<bool key="IBUIOpaque">NO</bool>
@@ -290,6 +290,7 @@
 				</array>
 				<string key="NSFrameSize">{300, 66}</string>
 				<reference key="NSSuperview"/>
+				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="1043728466"/>
 				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 				<reference key="IBUIContentView" ref="1043728466"/>
@@ -358,7 +359,7 @@
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">levelLabel</string>
 						<reference key="source" ref="923471272"/>
-						<reference key="destination" ref="614205915"/>
+						<reference key="destination" ref="1008497734"/>
 					</object>
 					<int key="connectionID">27</int>
 				</object>
@@ -404,8 +405,7 @@
 							<reference ref="853163999"/>
 							<reference ref="768365372"/>
 							<reference ref="227378708"/>
-							<reference ref="952206121"/>
-							<reference ref="614205915"/>
+							<reference ref="1008497734"/>
 						</array>
 						<reference key="parent" ref="0"/>
 					</object>
@@ -456,13 +456,8 @@
 						<reference key="parent" ref="923471272"/>
 					</object>
 					<object class="IBObjectRecord">
-						<int key="objectID">25</int>
-						<reference key="object" ref="952206121"/>
-						<reference key="parent" ref="923471272"/>
-					</object>
-					<object class="IBObjectRecord">
 						<int key="objectID">26</int>
-						<reference key="object" ref="614205915"/>
+						<reference key="object" ref="1008497734"/>
 						<reference key="parent" ref="923471272"/>
 					</object>
 				</array>
@@ -476,7 +471,6 @@
 				<string key="14.CustomClassName">HJManagedImageV</string>
 				<string key="14.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="23.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-				<string key="25.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="26.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="3.CustomClassName">FriendCell</string>
 				<string key="3.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
@@ -492,7 +486,89 @@
 			<nil key="sourceID"/>
 			<int key="maxID">27</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes"/>
+		<object class="IBClassDescriber" key="IBDocument.Classes">
+			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
+				<object class="IBPartialClassDescription">
+					<string key="className">FriendCell</string>
+					<string key="superclassName">PPTableViewCell</string>
+					<object class="NSMutableDictionary" key="actions">
+						<string key="NS.key.0">clickFollowButton:</string>
+						<string key="NS.object.0">id</string>
+					</object>
+					<object class="NSMutableDictionary" key="actionInfosByName">
+						<string key="NS.key.0">clickFollowButton:</string>
+						<object class="IBActionInfo" key="NS.object.0">
+							<string key="name">clickFollowButton:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+					</object>
+					<dictionary class="NSMutableDictionary" key="outlets">
+						<string key="areaLabel">UILabel</string>
+						<string key="authImageView">UIImageView</string>
+						<string key="avatarView">HJManagedImageV</string>
+						<string key="followButton">UIButton</string>
+						<string key="genderLabel">UILabel</string>
+						<string key="levelLabel">UILabel</string>
+						<string key="nickNameLabel">UILabel</string>
+						<string key="statusLabel">UILabel</string>
+					</dictionary>
+					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
+						<object class="IBToOneOutletInfo" key="areaLabel">
+							<string key="name">areaLabel</string>
+							<string key="candidateClassName">UILabel</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="authImageView">
+							<string key="name">authImageView</string>
+							<string key="candidateClassName">UIImageView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="avatarView">
+							<string key="name">avatarView</string>
+							<string key="candidateClassName">HJManagedImageV</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="followButton">
+							<string key="name">followButton</string>
+							<string key="candidateClassName">UIButton</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="genderLabel">
+							<string key="name">genderLabel</string>
+							<string key="candidateClassName">UILabel</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="levelLabel">
+							<string key="name">levelLabel</string>
+							<string key="candidateClassName">UILabel</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="nickNameLabel">
+							<string key="name">nickNameLabel</string>
+							<string key="candidateClassName">UILabel</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="statusLabel">
+							<string key="name">statusLabel</string>
+							<string key="candidateClassName">UILabel</string>
+						</object>
+					</dictionary>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/FriendCell.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">HJManagedImageV</string>
+					<string key="superclassName">UIView</string>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/HJManagedImageV.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">PPTableViewCell</string>
+					<string key="superclassName">UITableViewCell</string>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/PPTableViewCell.h</string>
+					</object>
+				</object>
+			</array>
+		</object>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaTouchFramework</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginDeclaredDependencyDefaults">
@@ -501,10 +577,10 @@
 		</object>
 		<bool key="IBDocument.PluginDeclaredDependenciesTrackSystemTargetVersion">YES</bool>
 		<int key="IBDocument.defaultPropertyAccessControl">3</int>
-		<dictionary class="NSMutableDictionary" key="IBDocument.LastKnownImageSizes">
-			<string key="mumber@2x.png">{50, 45}</string>
-			<string key="user_picbg.png">{16, 16}</string>
-		</dictionary>
+		<object class="NSMutableDictionary" key="IBDocument.LastKnownImageSizes">
+			<string key="NS.key.0">user_picbg.png</string>
+			<string key="NS.object.0">{16, 16}</string>
+		</object>
 		<string key="IBCocoaTouchPluginVersion">1179</string>
 	</data>
 </archive>
